style.css
:root {
    --fh: #595959;
    --fs: #404040;
    --fg: #0d0d0d;
    --bg: #ffffff;
    --no: #f2f2f2;
    --nv: #e6e6e6;
    --nc: #d9d9d9;
    --ns: #cccccc;
    --na: #bfbfbf;
    --p: 90%;
    --bp: 70%;
    --ep: 20%;
}

.page {
    display: none;

    &.active {
        display: block;
    }
}

.hidden {
    display: none;
}

.dark {
    --fh: #b3b3b3;
    --fs: #cccccc;
    --fg: #ffffff;
    --bg: #0d0d0d;
    --no: #1a1a1a;
    --nv: #262626;
    --nc: #333333;
    --ns: #404040;
    --na: #4d4d4d;
    --p: 10%;
    --bp: 30%;
    --ep: 80%;
}

.en {
    --lang: 'en';
}

.fr {
    --lang: 'fr';
}

body {
    height: 500px;
    background-color: var(--bg);
    color: var(--fg);
    font-family: 'Roboto', sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings: "wdth" 100;
    scrollbar-color: var(--na) var(--no);
}

.site {
    position: relative;
    z-index: 1;
}

.sub-overlay {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    backdrop-filter: brightness(var(--bp));
    z-index: 2;
}

.overlay {
    margin-left: 0.5em;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    overflow-y: auto;
    overflow-x: hidden;
    width: 20em;
    z-index: 3;
    background-color: var(--no);
}

@media (max-width: 479px) {
    body {
        font-size: 13px;
    }
}

h2 {
    font-size: 1.5em;
}

p {
    font-weight: normal;
    font-size: 1em;
}

.trigger {
    border-style: none;
    border-radius: 0.3em;
    height: 2em;
    width: 2em;
    color: var(--fg);
    background-color: var(--nv);
    position: relative;
    --n: block;
    --h: none;

    &.option,
    &.header {
        background-color: var(--no);
    }
}

.top {
    position: fixed;
    z-index: 3;
    top: 0;
    left: 0;
    background-color: var(--bg);
    height: 3em;
    width: 100%;
}

.page.fix {
    position: fixed;
    padding: 0.5em;

    &.header {
        left: 0;
        height: 2em;
        background-color: var(--bg);
    }

    &.option {
        right: 0;
        z-index: -1;
    }
}

.pages.open {
    margin-left: 20.5em;
}

#subMenuPage.page.active {
    display: none;
}

@media only screen and (max-width: 800px) {
    .pages.open {
        margin-left: 0;
    }

    #subMenuPage.page.active {
        display: block;
    }
}

@media only screen and (max-width: 300px) {
    #navPage.page.active {
        display: none;
    }
}

.top-page {
    margin: 2.5em 0;

    &.menu {
        padding: 0;
        margin: 3.5em 0 0 0;
    }
}

.container {
    margin: 1em 0;
    background-color: var(--no);
    position: relative;
    float: left;
    padding: 0.5em;
}

.container-text {
    position: relative;
    background-color: var(--no);
    padding-top: 0.1em;
    padding-bottom: 0.1em;
}

.container-top {
    position: relative;
    margin: 0;
    bottom: -1em;
}

.container-set {
    width: 30em;
}

.table-container {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    position: relative;
    padding-bottom: 1em;
    padding-right: 0.5em;
    height: 6.6em;

    &.periodic {
        flex-wrap: wrap;
        overflow: visible;
    }
}

@media only screen and (max-width: 500px) {
    .periodic.table-container {
        flex-wrap: nowrap;
        overflow-y: auto;
        overflow-x: hidden;
    }
}

.table-row {
    border: solid;
    background-color: var(--no);
    width: 15em;
    padding: 0.20em;
    margin-left: 0.5em;
    border-width: 0.1em;
    border-color: var(--ns);
    border-bottom: 0;
}

.table-el {
    float: left;
    text-align: left;
}

.table-el-desc {
    float: right;
    text-align: right;
}

@media only screen and (max-width: 35em) {
    .container-set {
        width: 95%;
    }
}

.select {
    width: 8em;
}

.row {
    width: 100%;
}

.text {
    height: 1.5em;
    width: 12em;

    background-color: var(--bg);

    border: solid;
    border-width: 0.1em;
    border-color: var(--ns);

    &.in {
        margin-left: 1%;
    }
}

.p-title {
    margin-bottom: 0.5em;
    text-decoration: underline;
    text-underline-offset: 0.2em;
    margin: 0.5em 0;
}

.scroll {
    width: 100%;
    overflow-y: hidden;
    overflow-x: auto;
}

img {
    max-width: 100%;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.flex-row {
    display: flex;
    flex-direction: row;
}

.flex-in-row {
    display: inline-flex;
    flex-direction: row;
}

.converter {
    margin: 1em 0;
}

.periodic {
    &.period-0 {
        height: 1em;
    }

    &.group-0 {
        width: 1em;
    }
}

.periodic-table {
    display: flex;
    flex-direction: column;

    --elbg: transparent;
}

.group {
    .non_metal {
        --elbg: hsl(140, 100%, var(--p));
    }

    .transition_metal {
        --elbg: hsl(0, 100%, var(--p));
    }

    .post_transition_metal {
        --elbg: hsl(190, 100%, var(--p));
    }

    .metalloid {
        --elbg: hsl(200, 100%, var(--p));
    }

    .noble_gas {
        --elbg: hsl(264, 100%, var(--p));
    }

    .alkali_metal {
        --elbg: hsl(60, 100%, var(--p));
    }

    .alkaline_earth_metal {
        --elbg: hsl(40, 100%, var(--p));
    }

    .lanthanide {
        --elbg: hsl(300, 100%, var(--p));
    }

    .actinide {
        --elbg: hsl(280, 100%, var(--p));
    }

    .unknown {
        --elbg: hsl(0, 10%, var(--p));
    }
}

.block {
    .s-block {
        --elbg: hsl(300, 75%, var(--p))
    }

    .d-block {
        --elbg: hsl(248, 53%, var(--p))
    }

    .p-block {
        --elbg: hsl(172, 100%, var(--p))
    }

    .f-block {
        --elbg: hsl(35, 100%, var(--p))
    }
}

.period-number {
    align-content: center;
    height: 100%;
}

.periodic-column {
    display: flex;
    flex-direction: row;
}

#PeriodicColumn-8 {
    margin-top: 1em;
}

.periodic-square {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-content: center;
    height: 3.2em;
    width: 3.2em;
    margin: 0.06em;
    overflow: hidden;
    border: solid;
    border-width: 0.1em;
    border-color: transparent;

    &.chemical-element {
        border-color: var(--ns);
    }

    &.display-square {
        margin: 0;
        height: 6.4em;
        width: 6.4em;
    }

    &.element-selected {
        border: solid;
        border-width: 0.1em;
        border-color: var(--fg);
    }

    background-color: var(--elbg);
}

.opposite {
    color: var(--bg);
}

.element-name {
    font-size: 60%;
}

.element-atomic-number {
    font-size: 50%;
}

.element-symbol {
    font-size: 1em;
    line-height: 100%;
}

.element-atomic-mass {
    font-size: 50%;
}

.element-info {
    &.element-name {
        font-size: 120%;
    }

    &.element-atomic-number {
        font-size: 100%;
    }

    &.element-symbol {
        font-size: 2em;
    }

    &.element-atomic-mass {
        font-size: 100%;
    }
}

.color-picker {}

.picker-color {
    height: 8em;
    width: 8em;
    border: solid;
    border-width: 0.1em;
    border-color: var(--nv);
    background-color: var(--clbg);
}

.picker-gradient {
    height: 13em;
    width: 13em;
}

.picker-gradient-line {
    width: 3em;
    height: 13em;
}

.text-right {
    text-align: right;
}

.text-left {
    text-align: left;
}

@media (hover: hover) {
    .trigger:hover {
        background-color: var(--nv);
        --n: none;
        --h: block;
    }

    .in:hover {
        background-color: var(--nc);
    }

    option {
        background-color: var(--no);
        border-radius: 0em;
    }

    .text:hover {
        background-color: var(--no);
    }
}

div .svgs {
    padding: 1em 0;
}

svg {
    position: absolute;
    height: 98%;
    width: 98%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    &.menu {
        height: 115%;
        width: 115%;
    }
}

.hover {
    display: var(--h);
}

.normal {
    display: var(--n);

    &.static {
        display: block;
    }
}

.set {
    margin: 0;
    padding: 0;
    list-style-type: none;
    overflow: hidden;
}

.header {
    float: left;
}

.option {
    float: right;
}

.logo {
    height: 1em;
    font-size: 1.5em;
}

.navigator,
.menu {
    float: left;
}

nav.nav {
    &.navigator {
        width: 100%;
        border-bottom: solid;
        border-width: 0.1em;
        border-color: #808080;
        background-color: var(--no);
    }

    &.menu {
        border-left: solid;
        border-width: 0.1em;
        border-color: #808080;
    }

}

ul.menu {
    position: relative;
}

.sub {
    background-color: var(--bg);
}

.icon {
    --img: url();
    background-repeat: no-repeat;
    padding-left: 1.5em;
    display: block;
    font-size: 1em;

    &.prism-launcher {
        --img: url('/img/prism_launcher.svg');
    }

    &.polymc {
        --img: url('/img/polymc.svg');
    }

    &.java-icon {
        --img: url('/img/java_icon.svg');
    }


    background-image: var(--img);
}

.icon-img {
    height: 1.5em;
    width: 1.5em;
}

h3 {
    margin-bottom: 0.6em;
}

.p3 {
    margin-top: 0.6em;
}

h4 {
    margin-top: 0.6em;
    margin-bottom: 0.6em;
    margin-left: 0.5em;
}

.p4 {
    font-size: 0.95em;
    margin-left: 0.5em;
}

a {
    color: var(--fs);

    &:hover {
        color: var(--fg);
    }
}

br {
    margin: 0.1em;
}

li {
    &.navigator {
        padding: 0.92em 0;
    }

    & a {
        font-weight: 600;
        text-decoration: none;
        color: var(--fs);
        text-align: center;
        padding: 1em;
        width: 8em;
    }

    & a.menu {
        text-align: left;
        padding: 0.75em;
        width: 16em;
    }

    & a.sub {
        color: var(--fh);
        padding-left: 1.5em;
    }

    & a:hover {
        color: var(--fg);
    }

    & a.sub:hover {
        color: var(--fs);
    }
}

li.sep {
    padding: 0.3em 0.5em;
}

.text-list {
    margin-left: -1em;

    & li {
        margin-top: 0.4em;

    }

    & li a {
        text-decoration: underline;
        padding: 0.5em;
    }
}

.selected {
    font-weight: 800;
    color: var(--fg);
    position: relative;

    &.sub {
        color: var(--fs);
    }

    &:after {
        content: "";
        width: 70%;
        height: 0.3em;
        border-radius: 0.25em;
        background: var(--fg);
        position: absolute;
        bottom: 0;
        right: 15%;
    }

    &.menu:after {
        height: 70%;
        width: 0.3em;
        top: 15%;
        left: -0.7%;
    }

    &.sub:after {
        background: var(--fs);
    }

}

